deploys/actual/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: actualbudget
  namespace: actualbudget
  labels:
    app.kubernetes.io/name: actualbudget
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`budget.rmblau.com`)
      services:
        - name: actualbudget
          port: 5006
  tls:
    certResolver: letsencrypt-dns01-issuer
